# VisReal

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
CmakeInclude/: DetectPlatform.cmake  DirectXShaderCompiler.cmake  Engine.cmake  FindD3D12.cmake  fmt.cmake  glad.cmake  glfw.cmake  rpmalloc.cmake  spdlog.cmake  (+1 more)
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/Include/Marco/: CoreLog.h  Marcos.h
Engine/Core/Include/Object/: Object.h  SingletonObject.h
Engine/Core/Include/Types/: FString.h  FTime.h  TArray.h  WindowsPlatform.h
Engine/Core/Marco/: CMakeLists.txt
Engine/Core/Marco/Include/: CoreLog.h
Engine/Core/Marco/Source/: CoreLog.cpp  Marcos.cpp
Engine/Core/Object/: CMakeLists.txt
Engine/Core/Object/Include/: Object.h  SingletonObject.h
Engine/Core/Object/Source/: Object.cpp
Engine/Core/Render/: CMakeLists.txt
Engine/Core/Render/Include/: GLWindowManager.h
Engine/Core/Render/Include/OpenGL/: GLConstant.h  GLWindowManager.h  VersionCheck.h
Engine/Core/Render/Source/: GLWindowManager.cpp
Engine/Core/Render/Source/OpenGL/: GLWindowManager.cpp  VersionCheck.cpp
Engine/Core/Source/Marco/: CoreLog.cpp
Engine/Core/Source/Types/: FString.cpp  FTime.cpp
Engine/Core/Type/: CMakeLists.txt  Readme.md
Engine/Core/Type/Include/: ChooseClass.h  FString.h  GenericPlatformTypes.h  PlatformTypes.h  TString.h  Types.h  WindowsPlatform.h
Engine/Core/Type/Source/: FString.cpp  FTime.cpp  PlatformTypes.cpp  TString.cpp
Engine/Include/: Entry.h  RenderThread.h
Engine/Modules/: CMakeLists.txt
Engine/Modules/Core/: CMakeLists.txt
Engine/Modules/Core/Include/: Core.h  CoreContianer.h  CoreTypes.h
Engine/Modules/Core/Include/Container/: ContainerForwardDefinition.h  CoreContainer.h  FString.h  FTime.h  TArray.h  TArray.inl  TArrayImpl.h  TMap.h  TSafeArray.h  TSafeArray.inl
Engine/Modules/Core/Include/Hash/: Hash.h  xxhash.h
Engine/Modules/Core/Include/Logger/: CoreLog.h
Engine/Modules/Core/Include/Marco/: Constant.h  CoreLog.h  MSVCPlatform.h  MSVCPlatfrom.h  Marcos.h  PlatformMarcos.h  PreprocessorHelpers.h
Engine/Modules/Core/Include/Math/: Axis.h  FMatrix.h  FPlane.h  FVector.h  FVector.inl  NumericLimits.h  Vector.h  VisRealMath.h  VisRealMathUtility.h
Engine/Modules/Core/Include/Memory/: MemoryUtils.h
Engine/Modules/Core/Include/Object/: ISingletonObject.h  Object.h  ReferenceObject.h  SingletonObject.h
Engine/Modules/Core/Include/Platform/: CorePlatform.h  GenericPlatform.h  GenericPlatformMath.h  GenericPlatformTypes.h  PlatformTypes.h  Types.h  WindowsPlatform.h
Engine/Modules/Core/Include/Platform/Generic/: GenericPlatform.h  GenericPlatformMath.h  GenericPlatformTime.h
Engine/Modules/Core/Include/Platform/PreCompile/: Platform.h  PlatformMath.h  PlatformTime.h  PlatformTypes.h
Engine/Modules/Core/Include/Platform/Windows/: MinWindows.h  MinimalWinApi.h  PostWindowsApi.h  PreWindowsApi.h  WindowsCore.h  WindowsPlatform.h  WindowsPlatformMath.h  WindowsPlatformTime.h  WindowsPlatformTypes.h
Engine/Modules/Core/Include/Renderer/: Mesh.h
Engine/Modules/Core/Include/Templates/: TAndOrNot.h  TAreTypesEqual.h  TChooseClass.h  TEnableIf.h  TIsArithmetic.h  TIsEnum.h  TIsPODType.h  TIsPointer.h  TIsTriviallyCopyAssignable.h  TIsTriviallyCopyConstructible.h  TIsTriviallyDestructible.h  TRemoveCV.h  TTypeTraits.h
Engine/Modules/Core/Include/ThreadPool/: ThreadPool.h
Engine/Modules/Core/Include/Types/: FString.h  GenericPlatformTypes.h  PlatformTypes.h  TArray.h  TMap.h  Types.h  WindowsPlatform.h
Engine/Modules/Core/Include/fmt/: CustomTypesFormatter.h
Engine/Modules/Core/Source/Container/: FString.cpp  FTime.cpp  TArray.cpp  TMap.cpp
Engine/Modules/Core/Source/Hash/: Hash.cpp  xxh_x86dispatch.c  xxhash.c
Engine/Modules/Core/Source/Logger/: CoreLog.cpp
Engine/Modules/Core/Source/Marco/: CoreLog.cpp
Engine/Modules/Core/Source/Math/: FPlane.cpp  FVector.cpp  Vector.cpp  VisRealMath.cpp  VisRealMathUtility.cpp
Engine/Modules/Core/Source/Object/: Object.cpp
Engine/Modules/Core/Source/Platform/: GenericPlatformMath.cpp
Engine/Modules/Core/Source/Platform/Generic/: GenericPlatformMath.cpp  GenericPlatformTime.cpp
Engine/Modules/Core/Source/Platform/Windows/: MinimalWindowsApi.cpp  WindowsPlatformTime.cpp
Engine/Modules/Core/Source/Renderer/: Mesh.cpp
Engine/Modules/Core/Source/Types/: FString.cpp  TArray.cpp  TMap.cpp
Engine/Modules/Core/Source/fmt/: CustomTypesFormatter.cpp
Engine/Modules/Event/: CMakeLists.txt
Engine/Modules/Event/Include/: Constant.h  EventLoop.h  StepTimer.h
Engine/Modules/Event/Source/: EventLoop.cpp
Engine/Modules/Input/: CMakeLists.txt
Engine/Modules/Input/Include/: Input.h
Engine/Modules/Input/Source/: Input.cpp
Engine/Modules/Render/: CMakeLists.txt
Engine/Modules/Render/Include/: Render.h
Engine/Modules/Render/Include/DirectX/: DxConstant.h  DxWindowManager.h
Engine/Modules/Render/Include/IRender/: IRenderBuffer.h  IRenderDevice.h  IRenderManager.h  Readme.txt
Engine/Modules/Render/Include/OpenGL/: GLConstant.h  GLDevice.h  GLWindowManager.h  VersionCheck.h
Engine/Modules/Render/Include/Screen/: Screen.h
Engine/Modules/Render/Source/: Render.cpp
Engine/Modules/Render/Source/DirectX/: DxWindowManager.cpp
Engine/Modules/Render/Source/OpenGL/: GLWindowManager.cpp  VersionCheck.cpp
Engine/Render/: CMakeLists.txt
Engine/Render/Include/OpenGL/: GLWindowManager.h  VersionCheck.h
Engine/Source/: Entry.cpp  RenderThread.cpp
Test/: CMakeLists.txt
Test/Engine/: CMakeLists.txt
Test/Engine/Modules/: CMakeLists.txt
Test/Engine/Modules/Core/: CMakeLists.txt
Test/Engine/Modules/Core/Include/: TestHash.h  TestReferenceObject.h
Test/Engine/Modules/Core/Source/: TestFString.cpp  TestHash.cpp  TestReferenceObject.cpp  TestTArray.cpp  TestTMap.cpp  main.cpp
Test/Engine/Modules/Render/: CMakeLists.txt
Test/Engine/Modules/Render/Source/: main.cpp
Test/Include/: TestFString.h  TestHash.h  TestTArray.h  TestTMap.h
Test/Source/: TestFString.cpp  TestHash.cpp  TestTArray.cpp  TestTMap.cpp  main.cpp
